# newswatch

./: feeds.txt  newswatch.rc
gui/: ConfigurationWindow.cpp  ConfigurationWindow.h  MainWindow.h  ReadMe.txt  Thumbs.db  newswatcher.cpp  newswatcher.sln  newswatcher.vcproj  stdafx.cpp
msvc-8_0/: newswatch.vcproj
src/: CMakeLists.txt  article_catcher.hpp  db_access.cpp  db_access.hpp  feed_watcher.cpp  feed_watcher.hpp  http_client.cpp  http_client.hpp  main.cpp  runcom_parser.hpp  sqlite3.cpp  symbol.h  symbol.hpp  text_extractor.cpp  text_extractor.hpp  word_counter.hpp
trunk/: CMakeLists.txt  newswatch.rc
trunk/gui/: AssemblyInfo.cpp  ConfigurationWindow.h  MainWindow.h  MainWindow.resX  newswatcher.vcproj
trunk/msvc-8_0/: newswatch.sln  newswatch.vcproj
trunk/src/: article_catcher.cpp  callback_handler.hpp  db_access.cpp  db_access.hpp  feed_watcher.hpp  globals.h  http_client.cpp  logging.hpp  main.cpp  runcom_parser.cpp  runcom_parser.hpp  symbol.cpp
trunk/website/: Thumbs.db
website/: index.html
